# tactopro

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
public/: .gitignore  hkust.stl
tactopro/: __init__.py  renderer.py  tactopro.py  vizutils.py
tactopro/dataset/: ycb_objects.py  ycb_reg.py  ycb_slide.py
tactopro/helpers/: mesh.py  pose.py  viz.py
tests/: .gitignore  conftest.py
tests/data/: README.md  object.stl
tests/unit/: test_mesh.py  test_render.py  test_sample.py  test_save.py  test_util.py
