[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactopro"
version = "0.0.3"
authors = [
    {name = "Zirui Zhang", email = "zhangzrjerry@outlook.com"},
]
description = "A lightweight wrapper designed to streamline the creation of TACTO simulations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tacto @ git+https://github.com/zhangzrjerry/tactopatch.git",
    "pyvista",
    "potpourri3d",
    "scikit-learn",
    "tqdm",
    "open3d",
    "dill",
]


[tool.setuptools]
include-package-data = true
packages = {find = {}}
package-data = {"tactopro" = ["assets/*.stl"]}